<resources>
    <string name="app_name">Amuse</string>
    <string name="title_activity_museum_finder">MuseumFinder</string>
    <string name="txtTitle">AMUSE</string>
    <string name="txtSubTitle">A Smart Museum</string>
    <string name="btnFaM">Find a Museum</string>
    <string name="btnMNav">Museum Navigator</string>
    <string name="btnQrScan">QR Scanner</string>
    <string name="btnMyAMUSE">My AMUSE</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnFinish">Finish</string>
    <string name="txtMuseumName">The National Museum</string>
    <string name="txtMuseumDesc">The Museum is renowned
institution dedicated to
uncovering and preserving the
remnants of ancient, forgotten cultures. It vast halls display artifacts, relics, and reconstructed ruins from lost societies.</string>

    //QR CODE RESULT PAGE
    <string name="resTitle">MONA LISA’S SCREAM</string>
    <string name="resDescr">monalisascream</string>
    <string name="aName"><u>ARTIST</u></string>
    <string name="aNameSub">JAMES BEYNTON</string>
    <string name="mUsed"><u>MATERIALS USED</u></string>
    <string name="mUsedSub">oil paint, tempera poplar wood panel</string>
    <string name="btnPuzzle">SOLVE ART PUZZLE</string>
    <string name="txtScroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>

    //MY AMUSE PAGE
    <string name="myAmuseTitle">MY AMUSE</string>
    <string name="museumVisited">MUSEUMS VISITED:</string>
    <string name="btnRedeem">REDEEM</string>
    <string name="amuseStamp">Solve MORE PUZZLES to collect MORE AMUSE STAMPS!</string>
    <string name="mDetails1">QR Codes Scanned :      4</string>
    <string name="mDetails2">QR Puzzles Solved:      2</string>
    <string name="mDetails3">Stamps Collected :      6</string>
    <string name="mDetails4">Last Visited     :      10/15/2024</string>

    //LOGIN PAGE
    <string name="LoginCD">Login Logo Background</string>
    <string name="logo">Amuse Logo</string>

    <string name="inpUser">Username</string>
    <string name="inpEmail">Email</string>
    <string name="inpPass">Password</string>
    <string name="inpConPass">Confirm Password</string>

    <string name="btnLoginFP">LOGIN</string>
    <string name="btnSignUpFP">SIGN UP</string>

    <string name="txtLogin">Login</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="descSignUp">Don\'t have an account?</string>
    <string name="descLogin">Already have an account?</string>

    <!--
    <string name="dropdownMA"> </string>
    <string-array name="museum_array">
        <item>The National Museum</item>
        <item>Museo Kordilyera</item>
        <item>BenCab Museum</item>
        <item>Baguio Museum</item>
    </string-array>
   -->

</resources>