<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puzzle"
    android:background="@color/GrayBlue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        tools:ignore="MissingConstraints" >
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/puzzleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar"
        app:layout_constraintBottom_toTopOf="@id/monalisascream"/>

    <ImageView
        android:id="@+id/monalisascream"
        android:layout_width="287dp"
        android:layout_height="230dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/resDescr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/puzzleTitle"
        app:srcCompat="@drawable/monalisa_scream" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="283dp"
        android:layout_height="216dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@color/Patina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monalisascream">

    </RelativeLayout>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_rounded_corner"

        android:backgroundTint="@color/Juniper"
        android:shadowColor="@color/black"
        android:text="@string/btnFinish"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>